# orgo-pilot

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
src/orgolab/: __init__.py  __main__.py  api.py
src/orgolab/api/: app.py  lifespan.py  routes.py
src/orgolab/core/: __init__.py  action_log.py  event_capture.py  executor.py  images.py
src/orgolab/core/replay/: __init__.py  orgo.py  sandbox.py
src/orgolab/domain/: __init__.py  config.py  constants.py  models.py
src/orgolab/infra/: __init__.py  artifacts.py  ffmpeg.py  store.py
src/orgolab/web/: index.html
